--- a/src/Grafica/Administrador.form
+++ b/src/Grafica/Administrador.form
@@ -704,9 +704,9 @@
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                                   <Table columnCount="4" rowCount="15">
                                     <Column editable="false" title="ID" type="java.lang.Object"/>
-                                    <Column editable="true" title="Cargo" type="java.lang.Object"/>
+                                    <Column editable="false" title="Cargo" type="java.lang.Object"/>
                                     <Column editable="false" title="Usuario" type="java.lang.Object"/>
-                                    <Column editable="true" title="Contrase&#xf1;a" type="java.lang.Object"/>
+                                    <Column editable="false" title="Contrase&#xf1;a" type="java.lang.Object"/>
                                   </Table>
                                 </Property>
                                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -726,7 +726,7 @@
                                       <Editor/>
                                       <Renderer/>
                                     </Column>
-                                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                                       <Title/>
                                       <Editor/>
                                       <Renderer/>
